[package]
name = "wrecked"
version = "0.1.13"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "A terminal graphics library"
repository = "https://github.com/quintinfsmith/wrecked"
license = "GPL-2.0-or-later"
categories = ["GUI", "Command-line Interface"]
keywords = ["tui", "ui", "terminal"]

[dependencies]
termios = "0.3"
libc = "0.2"

[lib]
name = "wrecked"
crate-type = ["rlib"]
