[package]
name = "wrecked"
version = "1.0.8"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "A terminal graphics library"
repository = "https://github.com/quintinfsmith/wrecked"
license = "GPL-2.0-or-later"
categories = ["GUI", "Command-line-interface"]
keywords = ["tui", "ui", "terminal"]

[target.'cfg(unix)'.dependencies]
termios = "0.3"

[dependencies]
libc = "0.2"

[lib]
name = "wrecked"
crate-type = ["rlib"]
