[package]
name = "wrecked"
version = "1.2.0"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "A terminal graphics library"
repository = "https://burnsomni.net/git/wrecked"
homepage = "https://burnsomni.net/software/wrecked"
license = "GPL-2.0-or-later"
categories = ["GUI", "Command-line-interface"]
keywords = ["tui", "ui", "terminal"]

[target.'cfg(unix)'.dependencies]
termios = "0.3"
libc = "0.2.132"

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
	"Win32_System_Console",
	"Win32_Foundation"
]


[dependencies]
terminal_size = "0.1.13"

[lib]
name = "wrecked"
crate-type = ["rlib"]
